# MECH-Numeric

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: vehicle.json
docs/: Revised Numerical Methods Project Topic.md  Sequential Two-Step Racing Trajectory Notes.md  Three Pass Centerline Speed Analysis Proposal.md
docs/changelog/: 2026_05_17_track_cli_command_and_figure_report.md  2026_05_22_webui_and_visualization_report.md  2026_05_23_multimethod_webui_comparison_report.md
frontend/: app.js  index.html  styles.css  track.html
outputs/web_cache/: manifest.json
outputs/web_cache/centerline_baseline/: Austin.json  BrandsHatch.json  Budapest.json  Catalunya.json  Hockenheim.json  IMS.json  Melbourne.json  MexicoCity.json  Montreal.json  Monza.json  MoscowRaceway.json  Norisring.json  Nuerburgring.json  Oschersleben.json  Sakhir.json  SaoPaulo.json  Sepang.json  Shanghai.json  Silverstone.json  Sochi.json  Spa.json  Spielberg.json  Suzuka.json  YasMarina.json  Zandvoort.json
outputs/web_cache/min_curvature/: Austin.json  BrandsHatch.json  Budapest.json  Catalunya.json  Hockenheim.json  IMS.json  Melbourne.json  MexicoCity.json  Montreal.json  Monza.json  MoscowRaceway.json  Norisring.json  Nuerburgring.json  Oschersleben.json  Sakhir.json  SaoPaulo.json  (+9 more)
script/: run_webapp.py  track_cli.py
source/: __init__.py  cli.py  config.py  curvature.py  data_loader.py  geometry.py  path_optimization.py  path_optimization_b.py  path_optimization_c.py  plots.py  sensitivity.py  speed_profile.py
webapp/: __init__.py  main.py  metrics.py  service.py
(+50 files in other folders)
