[project]
name = "mech-numeric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "plotly>=6.7.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.47.0",
]
